Improve button layout with better spacing
Changed action buttons to stack vertically with consistent spacing using Bootstrap's d-grid and gap-2 classes. This provides:
- Better visual separation between buttons
- Full-width buttons that are easier to tap on mobile
- Consistent spacing instead of cramped horizontal layout

--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Calculate</button>
-                        <button type="button" class="btn btn-secondary ms-2" id="exportCsvBtn">Export to CSV</button>
-                        <button type="button" class="btn btn-outline-secondary ms-2" id="clearDataBtn">Clear Saved Data</button>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary">Calculate</button>
+                            <button type="button" class="btn btn-secondary" id="exportCsvBtn">Export to CSV</button>
+                            <button type="button" class="btn btn-outline-secondary" id="clearDataBtn">Clear Saved Data</button>
+                        </div>
                     </div>
                 </form>
             </div>
